<resources>
    <string name="app_name">StoryApp</string>
    <string name="wave_header">wave_header</string>
    <string name="wave_footer">wave_footer</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Doesn\'t Have An account ?</string>
    <string name="register">Register</string>
    <string name="sudah_punya_akun">Already Have An account ?</string>
    <string name="username">Username</string>
    <string name="fab_add">fab_add</string>
    <string name="add_story">Add Story</string>
    <string name="image">image</string>
    <string name="camera">Camera</string>
    <string name="galeri">Galery</string>
    <string name="masukkan_deskripsi">Insert Description</string>
    <string name="submit">Submit</string>
    <string name="back">back</string>
    <string name="splashscreen">splashScreen</string>
    <string name="logout">Logout</string>
    <string name="appwidget_text">Story App</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">empty Text</string>
    <string name="btn_validation"> please fill out the form above</string>
    <string name="widget_image">widget image</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="submit_with_location">Submit with location</string>
</resources>