<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/headerWave"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/wave_header"
        android:src="@drawable/wave_header"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent" />

    <com.muflidevs.storyapp.ui.customView.CustomEmailEditText
        android:id="@+id/ed_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:hint="@string/email"
        android:alpha="1"
        android:textColorHint="@color/secondary"
        android:drawableStart="@drawable/mail_icon"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:drawablePadding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/footerWave"
        app:layout_constraintTop_toTopOf="@+id/headerWave"
        app:layout_constraintVertical_bias="0.346"
        tools:layout_editor_absoluteX="0dp" />

    <com.muflidevs.storyapp.ui.customView.CustomPasswordEditText
        android:id="@+id/ed_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:alpha="1"
        android:drawableStart="@drawable/user_login_password_icon"
        android:drawablePadding="8dp"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:textColorHint="@color/secondary"
        android:inputType="textPassword"
        app:layout_constraintVertical_bias="0.458"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textColor="@color/primary"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/footerWave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <com.muflidevs.storyapp.ui.customView.CustomButton
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:text="@string/register"
        android:alpha="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.082">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/belum_punya_akun"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_bold"
            android:alpha="0"
            android:text="@string/register"
            android:textColor="@color/primary"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/footerWave"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/wave_footer"
        android:src="@drawable/wave_footer"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintTop_toTopOf="@+id/headerWave"
        tools:layout_editor_absoluteX="158dp" />

</androidx.constraintlayout.widget.ConstraintLayout>